# advent-of-code

./: .gitignore
2015/: Cargo.toml
2015/aoc-2015/: Cargo.toml
2015/aoc-2015-01/: Cargo.toml  README.md
2015/aoc-2015-01/benches/: benchmark.rs
2015/aoc-2015-01/src/: lib.rs  part_one.rs  part_two.rs
2015/aoc-2015-02/: Cargo.toml  README.md
2015/aoc-2015-02/benches/: benchmark.rs
2015/aoc-2015-02/src/: lib.rs  part_one.rs  part_two.rs
2015/aoc-2015-03/: Cargo.toml  README.md
2015/aoc-2015-03/benches/: benchmark.rs
2015/aoc-2015-03/src/: lib.rs  part_one.rs  part_two.rs
2015/aoc-2015-04/: Cargo.toml  README.md
2015/aoc-2015-04/src/: lib.rs
2015/aoc-2015-05/: Cargo.toml  README.md
2015/aoc-2015-05/benches/: benchmark.rs
2015/aoc-2015-05/src/: lib.rs  part_one.rs  part_two.rs
2015/aoc-2015-06/: Cargo.toml  README.md
2015/aoc-2015-06/benches/: benchmark.rs
2015/aoc-2015-06/src/: lib.rs  part_one.rs  part_two.rs
2015/aoc-2015-07/: Cargo.toml  README.md
2015/aoc-2015-07/benches/: benchmark.rs
2015/aoc-2015-07/src/: lib.rs
2015/aoc-2015-08/: Cargo.toml  README.md
2015/aoc-2015-08/benches/: benchmark.rs
2015/aoc-2015-08/src/: lib.rs  part_one.rs  part_two.rs
2015/aoc-2015-09/: Cargo.toml  README.md
2015/aoc-2015-09/benches/: benchmark.rs
2015/aoc-2015-09/src/: exhaustive.rs  lib.rs
2015/aoc-2015-10/: Cargo.toml  README.md
2015/aoc-2015-10/src/: lib.rs
2015/aoc-2015-11/: Cargo.toml  README.md
2015/aoc-2015-11/src/: lib.rs
2015/aoc-2015-12/: Cargo.toml  README.md
2015/aoc-2015-12/src/: lib.rs  part_one_regex.rs  part_two_serde.rs
2015/aoc-2015-13/: Cargo.toml  README.md
2015/aoc-2015-13/src/: lib.rs
2015/aoc-2015-14/: Cargo.toml  README.md
2015/aoc-2015-14/src/: lib.rs  part_one.rs  part_two.rs
2015/aoc-2015-15/: Cargo.toml  README.md
2015/aoc-2015-15/src/: lib.rs
2015/aoc-2015-16/: Cargo.toml  README.md
2015/aoc-2015-16/src/: lib.rs
2015/aoc-2015-17/: Cargo.toml  README.md
2015/aoc-2015-17/src/: lib.rs
2015/aoc-2015-18/: Cargo.toml  README.md
2015/aoc-2015-18/src/: lib.rs
2015/aoc-2015-19/: Cargo.toml  README.md
2015/aoc-2015-19/src/: lib.rs  part_one.rs  part_two.rs
2015/aoc-2015-20/: Cargo.toml  README.md
2015/aoc-2015-20/src/: lib.rs
2015/aoc-2015-21/: Cargo.toml  README.md
2015/aoc-2015-21/src/: lib.rs
2015/aoc-2015-22/: Cargo.toml  README.md
2015/aoc-2015-22/src/: lib.rs
2015/aoc-2015-23/: Cargo.toml  README.md
2015/aoc-2015-23/src/: lib.rs
2015/aoc-2015-24/: Cargo.toml  README.md
2015/aoc-2015-24/src/: lib.rs
2015/aoc-2015-25/: Cargo.toml  README.md
2015/aoc-2015-25/src/: lib.rs
2015/aoc-2015-common/: Cargo.toml
2015/aoc-2015-common/src/: input.rs  lib.rs  ops.rs  output.rs  parsing.rs  timing.rs
2016/: Cargo.toml  README.md
2016/aoc-2016/: Cargo.toml
2016/aoc-2016-01/: Cargo.toml  README.md
2016/aoc-2016-common/: Cargo.toml
2016/aoc-day-01/: README.md
2016/aoc-day-02/: README.md
2016/aoc-day-03/: README.md
2016/aoc-day-04/: Cargo.toml  README.md
2016/aoc-day-05/: Cargo.toml  README.md
2016/aoc-day-06/: README.md
2016/aoc-day-07/: README.md
2016/aoc-day-08/: Cargo.toml  README.md
2016/aoc-day-09/: Cargo.toml  README.md
2016/aoc-day-10/: Cargo.toml  README.md
2016/aoc-day-11/: Cargo.toml  README.md
2016/aoc-day-12/: Cargo.toml  README.md
2016/aoc-day-13/: README.md
2016/aoc-day-14/: Cargo.toml  README.md
2016/aoc-day-14/benches/: benchmark.rs
2016/aoc-day-14/src/: lib.rs  main.rs
2016/aoc-day-15/: Cargo.toml  README.md
2016/aoc-day-16/: Cargo.toml  README.md
2016/aoc-day-17/: Cargo.toml  README.md
2016/aoc-day-18/: Cargo.toml  README.md
2016/aoc-day-19/: README.md
2016/aoc-day-20/: README.md
2016/aoc-day-21/: Cargo.toml  README.md
2016/aoc-day-22/: Cargo.toml  README.md
2016/aoc-day-23/: Cargo.toml  README.md
2016/aoc-day-24/: Cargo.toml  README.md
2016/aoc-day-25/: Cargo.toml  README.md
2017/: README.md
2017/aoc-day-01/: README.md
2017/aoc-day-02/: README.md
2017/aoc-day-03/: README.md
2017/aoc-day-04/: README.md
2017/aoc-day-05/: Cargo.toml  README.md
2017/aoc-day-06/: Cargo.toml  README.md
2017/aoc-day-07/: Cargo.toml  README.md
2017/aoc-day-08/: Cargo.toml  README.md
2017/aoc-day-08/benches/: benchmark.rs
2017/aoc-day-08/src/: lib.rs  main.rs
2017/aoc-day-09/: README.md
2017/aoc-day-10/: README.md
2017/aoc-day-11/: README.md
2017/aoc-day-12/: Cargo.toml  README.md
2017/aoc-day-13/: Cargo.toml  README.md
2017/aoc-day-14/: README.md
2017/aoc-day-15/: Cargo.toml  README.md
2017/aoc-day-16/: Cargo.toml  README.md
2017/aoc-day-17/: README.md
2017/aoc-day-18/: README.md
2017/aoc-day-19/: Cargo.toml  README.md
2018/: README.md
2018/aoc-day-03/: Cargo.toml  README.md
2018/aoc-day-03/benches/: benchmark.rs
2018/aoc-day-03/src/: lib.rs  main.rs
2019/: Cargo.toml  rustfmt.toml
2020/: Cargo.toml  README.md
2020/aoc-2020/: Cargo.toml
2020/aoc-2020-13/: Cargo.toml  README.md
2020/aoc-2020-13/benches/: day-13.rs
2020/aoc-2020-13/src/: lib.rs  part_one.rs  part_two.rs
2021/: README.md
2021/aoc-day-12/: Cargo.toml  README.md
2021/aoc-day-12/benches/: benchmark.rs
2021/aoc-day-12/src/: lib.rs  main.rs  parsing.rs  part_one.rs  part_one_v1.rs  part_one_v2.rs  part_two.rs  part_two_v1.rs  part_two_v2.rs
2021/aoc-day-15/: Cargo.toml  README.md
2021/aoc-day-15/benches/: benchmark.rs
2021/aoc-day-15/src/: astar_pf.rs  astar_v1.rs  lib.rs  main.rs
2022/: README.md
2022/aoc-day-11/: Cargo.toml  README.md
2022/aoc-day-11/benches/: benchmark.rs
2022/aoc-day-11/src/: lib.rs  main.rs
2022/aoc-shared/: Cargo.toml
2022/aoc-shared/src/: hashing.rs  parsing.rs
2023/: README.md
2024/: README.md
2024/aoc-day-00/: Cargo.toml
2024/aoc-day-00/benches/: benchmark.rs
2024/aoc-day-00/src/: lib.rs  main.rs
2024/aoc-day-19/: Cargo.toml  README.md
2024/aoc-day-19/benches/: benchmark.rs
2024/aoc-day-19/inputs/: input.txt
2024/aoc-day-19/src/: array_based.rs  array_node_based.rs  flat_array_based.rs  hash_node_based.rs  lib.rs  main.rs
(+1031 files in other folders)
