[package]
name = "aoc-2015-03"
version = "0.1.0"
authors = ["Svetlin Zarev <svetlin.zarev@zarev.net>"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
aoc-2015-common = { path = "../aoc-2015-common" }

[dev-dependencies]
criterion.workspace = true


[[bench]]
name = "benchmark"
harness = false
