[package]
name = "aoc-day-14"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"

[profile.test]
opt-level = 2

[dependencies]
aoc-shared = { path = "../aoc-shared" }
md-5 = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
