[package]
name = "aoc-day-08"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
aoc-shared = { path = "../aoc-shared" }
lazy_static = "1"
regex = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
