[package]
name = "aoc-day-12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-shared = { path = "../aoc-shared" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false