[package]
name = "aoc-day-15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "yes"

[dependencies]
aoc-shared = { path = "../aoc-shared" }
pathfinding = "3.0.5"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
