[package]
name = "aoc-day-11"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
aoc-shared = { path = "../aoc-shared" }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
