[package]
name = "aoc-day-19"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"

[profile.test]
opt-level = 0

[dependencies]
aoc-shared = { path = "../aoc-shared" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
